# GameplayFootball

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README_PASS.md  example_output.json  vcpkg.json
CMakeModules/: FindSDL2_gfx.cmake  FindSDL2_ttf.cmake
data/databases/default/: database.sqlite
src/: gamedefines.cpp  gamedefines.hpp  main.cpp  main.hpp
src/data/: matchdata.hpp  teamdata.cpp  teamdata.hpp
src/menu/startmatch/: matchoptions.cpp
src/onthepitch/: match.cpp  match.hpp  referee.cpp
src/onthepitch/player/: player.cpp
src/systems/graphics/rendering/: opengl_renderer3d.cpp
